cks/lab3/accounts-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-accounts-ingress
  namespace: accounts
spec:
  tls:
  - hosts:
      - accounts.svc
    secretName: accounts-secret-tls
  rules:
  - host: accounts.svc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: accounts-svc
            port:
              number: 80
